[tool.poetry]
name = "zt-pii-agent-open-source"
version = "0.1.0"
description = "ZeroTrusted.ai PII agent repo"
authors = ["Vijay Karavadra <vijay.karavadra@zerotrusted.ai>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.113.0"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
requests = "^2.32.3"
httpx = "0.27.2"
mcp = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"